# Axis

./: .editorconfig  .env.example  .gitignore  .prettierignore  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
services/agent-orchestration/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/agent-orchestration/app/: config.py  events.py  main.py  permissions.py
services/agent-orchestration/app/agents/: __init__.py
services/agent-orchestration/app/capabilities/: __init__.py  _freshen_mixin.py  _freshness.py  activity.py  base.py  gdrive.py  gdrive_recent_activity.py  github.py  github_recent_activity.py  github_write.py  gmail.py  gmail_recent_activity.py  gmail_write.py  memory.py  notion_recent_activity.py  registry.py  slack.py  slack_recent_activity.py
services/agent-orchestration/app/clients/: anthropic.py  connector_manager.py  eval.py  memory.py
services/agent-orchestration/app/graphs/: planner.py
services/agent-orchestration/app/plugins/: __init__.py  manifest.py
services/agent-orchestration/app/plugins/gdrive/: __init__.py
services/agent-orchestration/app/plugins/github/: __init__.py
services/agent-orchestration/app/plugins/gmail/: __init__.py
services/agent-orchestration/app/plugins/internal/: __init__.py  activity.py  universal_search.py
services/agent-orchestration/app/plugins/notion/: __init__.py  __init__.py.search  __init__.py.write
services/agent-orchestration/app/plugins/slack/: __init__.py
services/agent-orchestration/app/repositories/: actions.py  messages.py  tasks.py  users.py  writes.py
services/agent-orchestration/app/tools/: __init__.py
services/agent-orchestration/app/util/: since.py
services/agent-orchestration/app/writeback/: diff.py  resolver.py
services/agent-orchestration/tests/: conftest.py
services/agent-orchestration/tests/capabilities/: test_activity_query_timezone.py  test_freshen_mixin.py  test_gdrive_recent_activity.py  test_github_recent_activity.py  test_gmail_recent_activity.py  test_notion_recent_activity.py  test_slack_recent_activity.py
services/agent-orchestration/tests/graphs/: test_freshness_propagation.py
services/agent-orchestration/tests/regressions/: test_notion_recent_edit_visible.py
services/agent-orchestration/tests/repositories/: test_users_timezone.py
services/agent-orchestration/tests/util/: test_since.py
services/api-gateway/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/api-gateway/app/: config.py  db.py  deps.py  main.py  ratelimit.py
services/api-gateway/app/clients/: agent.py  auth.py  base.py  connectors.py
services/api-gateway/app/repositories/: actions.py  organizations.py  projects.py
services/api-gateway/app/routes/: activity.py  admin.py  agent.py  auth.py  connectors.py  eval.py  feed.py  health.py  invites.py  memory.py  oauth_apps.py  orgs.py  permissions.py  projects.py  writes.py  ws.py
services/api-gateway/tests/: test_connectors_sync.py  test_health.py  test_proxy.py
services/auth-service/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/auth-service/app/: config.py  db.py  deps.py  main.py  models.py  security.py
services/auth-service/app/jwt/: __init__.py
services/auth-service/app/repositories/: users.py
services/auth-service/app/routes/: auth.py  health.py
services/auth-service/app/supabase/: __init__.py
services/auth-service/tests/: conftest.py  test_auth.py
services/connector-manager/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/connector-manager/app/: config.py  main.py  security.py
services/connector-manager/app/oauth/: github.py  google.py  notion.py  slack.py
services/connector-manager/app/proactive/: __init__.py  relevance.py  unanswered.py
services/connector-manager/app/repositories/: activity.py  connectors.py  index.py  oauth_apps.py  sync_state.py  user_oauth_apps.py
services/connector-manager/app/routes/: oauth.py  oauth_apps.py  tools.py  webhooks.py
services/connector-manager/app/sync/: __init__.py  base.py  gdrive.py  gdrive_sync.py  github.py  gmail.py  notion.py  notion_poll.py  registry.py  scheduler.py  slack.py  slack_sync.py
services/connector-manager/tests/: conftest.py
services/connector-manager/tests/connectors/: test_gdrive_client.py  test_github_client.py  test_gmail_client.py  test_notion_client.py  test_slack_client.py
services/connector-manager/tests/repositories/: test_sync_state.py
services/connector-manager/tests/routes/: conftest.py  test_freshen.py
services/connector-manager/tests/sync/: test_gdrive.py  test_github.py  test_gmail.py  test_notion.py  test_scheduler.py  test_slack.py
services/eval-engine/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/eval-engine/app/: config.py  main.py
services/eval-engine/app/judges/: __init__.py  haiku.py
services/eval-engine/app/loops/: short.py
services/eval-engine/app/repositories/: corrections.py
services/eval-engine/app/rubrics/: __init__.py  action.py  base.py  proactive.py  summarisation.py
services/memory-service/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/memory-service/app/: config.py  db.py  main.py
services/memory-service/app/graph/: __init__.py  client.py
services/memory-service/app/tiers/: __init__.py  episodic.py  procedural.py  semantic.py
services/memory-service/app/vector/: __init__.py  client.py  embed.py
services/proactive-monitor/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
services/proactive-monitor/app/: worker.py
services/proactive-monitor/app/relevance/: __init__.py
services/proactive-monitor/app/signals/: __init__.py
(+244 files in other folders)
