[project]
name = "axis-agent-orchestration"
version = "0.1.0"
description = "Axis Agent Orchestration — LangGraph planner + sub-agent executor"
requires-python = ">=3.12"
dependencies = [
    "axis-common",
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.8",
    "mcp>=1.7.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
dev = ["pytest>=8.3.0", "ruff>=0.5.5"]

[tool.uv.sources]
axis-common = { path = "../../packages/py-common", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"
