[project]
name = "axis-api-gateway"
version = "0.1.0"
description = "Axis API Gateway — auth, routing, WebSocket"
requires-python = ">=3.12"
dependencies = [
    "axis-common",
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.8.0",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.8",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
]

[tool.uv.sources]
axis-common = { path = "../../packages/py-common", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "respx>=0.21.1",
    "httpx>=0.27.0",
    "ruff>=0.5.5",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
