[project]
name = "axis-auth-service"
version = "0.1.0"
description = "Axis Auth Service — register, login, JWT issuance"
requires-python = ">=3.12"
dependencies = [
    "axis-common",
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.8.0",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "asyncpg>=0.30.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
axis-common = { path = "../../packages/py-common", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "respx>=0.21.1",
    "httpx>=0.27.0",
    "ruff>=0.5.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
